--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>eu.springdev</groupId>
 	<artifactId>spring-logging-extension</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.1-RELEASE</version>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -59,7 +59,7 @@
 		<repository>
 			<id>github</id>
 			<name>GitHub peter.varga.sp@gmail.com Apache Maven Packages</name>
-			<url>https://maven.pkg.github.com/peter.varga.sp@gmail.com/RELEASES</url>
+			<url>https://maven.pkg.github.com/peter-varga-sp/maven-packages</url>
 		</repository>
 	</distributionManagement>
 </project>
